--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.4.3"
+    "mysql2": "^3.4.3",
+    "sequelize": "^6.32.1"
   }
 }
