--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,7 @@ MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=
 MYSQL_DB=todolist
+
+module.exports = {
+    authSecret: '#$@%dfdfshgh.1233444593'
+}
