--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "express-validator": "^7.0.1",
     "mysql2": "^3.4.3",
     "sequelize": "^6.32.1",
+    "jwt-simple": "0.5.6",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
     "yup": "^1.3.2"
   }
 }
